DROPME: limited debug

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,8 +7,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        os: [ubuntu-20.04, windows-latest]
+        python-version: ['3.8']
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -16,6 +16,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - run: pip install -U pip --user
     - run: pip install -U nox wheel
-    - run: nox -s lint
+    # - run: nox -s lint
     - run: nox -s tests-${{ matrix.python-version }} -- --slow --cov
     - run: nox -s build
