--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ zip_safe = False
 packages = find:
 install_requires=
     gitpython>3
-    dulwich>=0.20.38
+    dulwich@git+https://github.com/dtrifiro/dulwich@master
     pygit2>=1.7.2
     pygtrie>=2.3.2
     fsspec>=2021.7.0
